# flashcards-cli

./: Cargo.toml  LICENSE-MIT  LICENSE.md  README.md  flashcards.json  flashcards.yaml
.codesandbox/: tasks.json
src/: config.rs  engine.rs  lib.rs  main.rs
src/engine/: config.rs  deck.rs  flashcard.rs  parser.rs
