[package]
name = "flashcards_cli"
version = "0.1.0"
authors = ["Aven Arlington <aven.arlington@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.159", features = ["derive"] }
serde_yaml = "0.9.25"
serde_json = "1.0.96"
rand = "*"
log = "*"
env_logger = "*"
